--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
             text-align: center;
             border: 2px solid #d1d5db;
             border-radius: 0.5rem;
-            padding: 0.25rem; /* Adjusted padding for larger font */
-            font-size: 3rem; /* Significantly increased font size */
+            padding: 0.5rem; /* Adjusted padding */
+            font-size: 2.25rem; /* Reduced font size */
+            line-height: 2.5rem; /* Added line-height for vertical centering */
             font-weight: 700;
             color: #1e40af;
             letter-spacing: 0.1em; /* Spacing between characters */
