--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
             text-align: center;
             border: 2px solid #d1d5db;
             border-radius: 0.5rem;
-            padding: 0.5rem; /* Adjusted padding */
-            font-size: 2.25rem; /* Reduced font size */
-            line-height: 2.5rem; /* Added line-height for vertical centering */
+            padding: 0.5rem;
+            /* Responsive font size: min 1.5rem, preferred 5vw, max 2.25rem */
+            font-size: clamp(1.5rem, 5vw, 2.25rem);
+            line-height: 1.2; /* Relative line-height for better vertical alignment */
             font-weight: 700;
             color: #1e40af;
-            letter-spacing: 0.1em; /* Spacing between characters */
+            letter-spacing: 0.1em;
             transition: all 0.2s;
         }
         #single-number-input:focus {
