--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
     <title>Ứng dụng Thống kê Nâng cao</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+    <script src="https://unpkg.com/split.js/dist/split.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Be Vietnam Pro', sans-serif;
             background-color: #f7f8fa;
+            overflow: hidden; /* Prevent body scroll */
         }
         .main-container {
-            display: grid;
-            grid-template-columns: 450px 1fr;
-            gap: 1.5rem;
+            display: flex; /* Changed to flex for Split.js */
+            gap: 0; /* Gap is handled by the gutter */
             padding: 1.5rem;
             max-width: 1800px;
             margin: auto;
@@ -33,10 +34,10 @@
             text-align: center;
             border: 2px solid #d1d5db;
             border-radius: 0.5rem;
-            padding: 0.5rem;
-            /* Responsive font size: min 1.5rem, preferred 5vw, max 2.25rem */
-            font-size: clamp(1.5rem, 5vw, 2.25rem);
-            line-height: 1.2; /* Relative line-height for better vertical alignment */
+            padding: 0.75rem 0.5rem;
+            /* Responsive font size: min 1.25rem, preferred 4vw, max 1.75rem */
+            font-size: clamp(1.25rem, 4vw, 1.75rem);
+            line-height: 1.2;
             font-weight: 700;
             color: #1e40af;
             letter-spacing: 0.1em;
@@ -47,7 +48,6 @@
             border-color: #3b82f6;
             box-shadow: 0 0 0 4px rgba(59, 130, 246, 0.3);
         }
-        /* Rule to center align all number inputs */
         input[type="number"] {
             text-align: center;
         }
@@ -122,10 +122,24 @@
             font-size: 0.9rem;
             white-space: nowrap;
         }
+        /* Split.js Gutter Styles */
+        .gutter {
+            background-color: #e5e7eb;
+            background-repeat: no-repeat;
+            background-position: 50%;
+        }
+        .gutter.gutter-horizontal {
+            cursor: col-resize;
+            background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAeCAYAAADkftS9AAAAIklEQVQoU2M4c+bM/5+BgeE4G5A4h0BwDUxwTEgUAD8xADn/3g0eAAAAAElFTkSuQmCC');
+        }
         @media (max-width: 1200px) {
             .main-container {
                 grid-template-columns: 1fr;
                 height: auto;
+                display: block; /* Revert to block for mobile */
+            }
+            #right-pane {
+                margin-top: 1.5rem;
             }
         }
     </style>
@@ -133,61 +147,59 @@
 <body class="text-gray-800">
 
     <div class="main-container">
-        <!-- Left Column -->
-        <div class="flex flex-col gap-6 overflow-y-auto pr-2">
-            <!-- File Upload Card -->
-            <div class="card">
-                <div class="card-header">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-sky-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-8l-4-4m0 0L8 8m4-4v12" /></svg>
-                    <span>Dữ liệu Excel</span>
+        <!-- Left Pane -->
+        <div id="left-pane" class="overflow-y-auto pr-2">
+            <div class="card flex flex-col gap-6 h-full">
+                <!-- File Upload Section -->
+                <div>
+                    <div class="card-header">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-sky-600" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-8l-4-4m0 0L8 8m4-4v12" /></svg>
+                        <span>Dữ liệu Excel</span>
+                    </div>
+                    <label for="file-upload" class="w-full bg-sky-600 hover:bg-sky-700 text-white font-bold py-3 px-4 rounded-lg cursor-pointer transition text-center block">
+                        Chọn file
+                    </label>
+                    <input id="file-upload" type="file" class="hidden" accept=".xlsx, .xls">
+                    <p id="file-info" class="text-sm text-gray-500 text-center mt-3">Chưa có file nào được chọn.</p>
                 </div>
-                <label for="file-upload" class="w-full bg-sky-600 hover:bg-sky-700 text-white font-bold py-3 px-4 rounded-lg cursor-pointer transition text-center block">
-                    Chọn file
-                </label>
-                <input id="file-upload" type="file" class="hidden" accept=".xlsx, .xls">
-                <p id="file-info" class="text-sm text-gray-500 text-center mt-3">Chưa có file nào được chọn.</p>
-            </div>
-            
-            <!-- Main Stats Card -->
-            <div class="card">
-                <div id="main-stats-container" class="text-sm">
+
+                <!-- Main Stats Section -->
+                <div id="main-stats-container" class="text-sm border rounded-lg p-4">
                     <p class="text-center text-gray-500 py-4">Kết quả thống kê sẽ hiện ở đây.</p>
                 </div>
-            </div>
 
-            <!-- Controls Card -->
-            <div class="card">
-                <!-- Manual/Random Input -->
-                <h3 class="font-semibold text-gray-600 mb-2 text-center">bộ số</h3>
-                <div id="comparison-inputs" class="mb-3">
-                    <input type="text" id="single-number-input" placeholder="Dán hoặc nhập các số">
-                </div>
-                <div class="grid grid-cols-2 gap-3 items-end">
-                    <button id="analyze-manual-btn" class="primary-btn h-full">Thống kê</button>
-                    <div class="flex flex-col gap-2">
-                         <div class="flex gap-2">
-                            <input id="random-max-input" type="number" value="35" class="w-full border border-gray-300 rounded-md !text-sm !py-1" placeholder="Max">
-                            <input id="random-count-input" type="number" value="5" class="w-full border border-gray-300 rounded-md !text-sm !py-1" placeholder="Count">
-                        </div>
-                        <button id="analyze-random-btn" class="primary-btn secondary-btn">Ngẫu nhiên</button>
+                <!-- Controls Section -->
+                <div class="flex-grow">
+                    <h3 class="font-semibold text-gray-600 mb-2 text-center">bộ số</h3>
+                    <div id="comparison-inputs" class="mb-3">
+                        <input type="text" id="single-number-input" placeholder="Dán hoặc nhập các số">
                     </div>
-                </div>
+                    <div class="grid grid-cols-2 gap-3 items-end">
+                        <button id="analyze-manual-btn" class="primary-btn h-full">Thống kê</button>
+                        <div class="flex flex-col gap-2">
+                            <div class="flex gap-2">
+                                <input id="random-max-input" type="number" value="35" class="w-full border border-gray-300 rounded-md !text-sm !py-1" placeholder="Max">
+                                <input id="random-count-input" type="number" value="5" class="w-full border border-gray-300 rounded-md !text-sm !py-1" placeholder="Count">
+                            </div>
+                            <button id="analyze-random-btn" class="primary-btn secondary-btn">Ngẫu nhiên</button>
+                        </div>
+                    </div>
 
-                <hr class="my-6">
+                    <hr class="my-6">
 
-                <!-- Filter Section -->
-                <h3 class="font-semibold text-gray-600 mb-2 text-center">lọc</h3>
-                <div class="flex items-center gap-3">
-                    <input id="filter-count-input" type="number" value="10" class="w-full border border-gray-300 rounded-md !text-base !py-2">
-                </div>
-                <div id="filter-results-container" class="results-grid mt-3 p-3 bg-slate-50 rounded-lg min-h-[50px]">
-                    <p class="text-center text-sm text-gray-500">Kết quả lọc sẽ hiện ở đây.</p>
+                    <h3 class="font-semibold text-gray-600 mb-2 text-center">lọc</h3>
+                    <div class="flex items-center gap-3">
+                        <input id="filter-count-input" type="number" value="10" class="w-full border border-gray-300 rounded-md !text-base !py-2">
+                    </div>
+                    <div id="filter-results-container" class="results-grid mt-3 p-3 bg-slate-50 rounded-lg min-h-[50px]">
+                        <p class="text-center text-sm text-gray-500">Kết quả lọc sẽ hiện ở đây.</p>
+                    </div>
                 </div>
             </div>
         </div>
 
-        <!-- Right Column -->
-        <div class="grid grid-cols-2 gap-6">
+        <!-- Right Pane -->
+        <div id="right-pane" class="grid grid-cols-2 gap-6">
             <!-- Recent Data Card -->
             <div class="card flex flex-col">
                 <div class="card-header justify-between">
@@ -458,6 +470,14 @@
                 e.preventDefault();
                 runFullAnalysis();
             }
+        });
+
+        // Initialize Split.js
+        Split(['#left-pane', '#right-pane'], {
+            sizes: [30, 70],
+            minSize: [450, 600],
+            gutterSize: 10,
+            cursor: 'col-resize'
         });
 
         // Initial render
