--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
             border: 2px solid #d1d5db;
             border-radius: 0.5rem;
             padding: 0.75rem 0.5rem;
-            /* Responsive font size: min 1.25rem, preferred 4vw, max 1.75rem */
             font-size: clamp(1.25rem, 4vw, 1.75rem);
             line-height: 1.2;
             font-weight: 700;
@@ -131,6 +130,10 @@
         .gutter.gutter-horizontal {
             cursor: col-resize;
             background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAeCAYAAADkftS9AAAAIklEQVQoU2M4c+bM/5+BgeE4G5A4h0BwDUxwTEgUAD8xADn/3g0eAAAAAElFTkSuQmCC');
+        }
+        /* FIX: Added min-height: 0 to flex containers to allow children to scroll */
+        .card.flex {
+            min-height: 0;
         }
         @media (max-width: 1200px) {
             .main-container {
