--- a/index.html
+++ b/index.html
@@ -121,6 +121,11 @@
             font-size: 0.9rem;
             white-space: nowrap;
         }
+        /* Fixed height for stats container */
+        #main-stats-container {
+            height: 240px; /* Fixed height for ~5 rows */
+            overflow-y: auto; /* Add scrollbar if content overflows */
+        }
         /* Split.js Gutter Styles */
         .gutter {
             background-color: #e5e7eb;
@@ -167,8 +172,10 @@
                 </div>
 
                 <!-- Main Stats Section -->
-                <div id="main-stats-container" class="text-sm border rounded-lg p-4">
-                    <p class="text-center text-gray-500 py-4">Kết quả thống kê sẽ hiện ở đây.</p>
+                <div class="text-sm border rounded-lg p-4">
+                    <div id="main-stats-container">
+                        <p class="text-center text-gray-500 py-4">Kết quả thống kê sẽ hiện ở đây.</p>
+                    </div>
                 </div>
 
                 <!-- Controls Section -->
@@ -293,7 +300,7 @@
                 if (count > 0) {
                      const percentage = totalSets > 0 ? ((count / totalSets) * 100).toFixed(2) : 0;
                      content += `
-                        <div class="flex justify-between p-2.5 border-b border-gray-100 text-sm">
+                        <div class="flex justify-between p-2 border-b border-gray-100 text-sm">
                             <span class="font-medium text-gray-600">Trùng ${i} số:</span>
                             <span class="font-bold text-blue-700">${count} bộ <span class="text-xs font-normal text-gray-500">(${percentage}%)</span></span>
                         </div>`;
